tests-integration/fixtures/checking/1784457540_value_mutual_infer_constraint/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
append :: forall (@a :: Type). Semigroup (a :: Type) => (a :: Type) -> (a :: Type) -> (a :: Type)
first :: forall (t :: Type). Semigroup (t :: Type) => (t :: Type) -> (t :: Type)
second :: forall (t :: Type). Semigroup (t :: Type) => (t :: Type) -> (t :: Type)

Types
Semigroup :: Type -> Constraint

Classes
class forall (a :: Type). Semigroup (a :: Type)
  append :: forall (@a :: Type). Semigroup (a :: Type) => (a :: Type) -> (a :: Type) -> (a :: Type)

Diagnostics
error[CannotGeneraliseRecursiveFunction]: Unable to generalise the type of this recursive function.
  --> 8:1..8:42
  |
8 | second value = append value (first value)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: The inferred type was: forall (t :: Type). Semigroup (t :: Type) => (t :: Type) -> (t :: Type)
  trivia: Try adding a type signature.
error[CannotGeneraliseRecursiveFunction]: Unable to generalise the type of this recursive function.
  --> 6:1..6:42
  |
6 | first value = append value (second value)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: The inferred type was: forall (t :: Type). Semigroup (t :: Type) => (t :: Type) -> (t :: Type)
  trivia: Try adding a type signature.
